unpackaged/objects/Knowledge__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Shows which brands the article is related to.</description>
        <label>Brand</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Baby Cakes</fullName>
                </value>
                <value>
                    <fullName>Black &amp; Decker</fullName>
                </value>
                <value>
                    <fullName>Breadman</fullName>
                </value>
                <value>
                    <fullName>Cooks</fullName>
                </value>
                <value>
                    <fullName>Copper Chef</fullName>
                </value>
                <value>
                    <fullName>Emeril Lagasse</fullName>
                </value>
                <value>
                    <fullName>Farberware</fullName>
                </value>
                <value>
                    <fullName>George Foreman</fullName>
                </value>
                <value>
                    <fullName>Juiceman</fullName>
                </value>
                <value>
                    <fullName>LUMABELLA</fullName>
                </value>
                <value>
                    <fullName>Luma Bella</fullName>
                </value>
                <value>
                    <fullName>Maxim</fullName>
                </value>
                <value>
                    <fullName>Melitta</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Power (Tristar)</fullName>
                </value>
                <value>
                    <fullName>PowerXL</fullName>
                </value>
                <value>
                    <fullName>REMINGTON</fullName>
                </value>
                <value>
                    <fullName>Russell Hobbs</fullName>
                </value>
                <value>
                    <fullName>Toastmaster</fullName>
                </value>
                <value>
                    <fullName>Westinghouse</fullName>
                </value>
                <value>
                    <fullName>Windmere</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCS_Notes__c</fullName>
        <label>CCS Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Distribution_Date__c</fullName>
        <description>Date information distributed to call centers and internal agents</description>
        <label>Distribution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalate__c</fullName>
        <label>Escalate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <description>Description of the problem you are trying to solve.</description>
        <label>Issue</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>KB_Confirmation_Allegro__c</fullName>
        <description>Date Allegro acknowledged receipt of article</description>
        <label>KB Confirmation Allegro</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KB_Confirmation_C360__c</fullName>
        <description>Date C360 acknowledged receipt of article</description>
        <label>KB Confirmation C360</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KB_Confirmation_Mantec__c</fullName>
        <description>Date Mantec acknowledged receipt of article information</description>
        <label>KB Confirmation Mantec</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Knowledge_Article_Prod_Id__c</fullName>
        <label>Knowledge Article Prod Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Models__c</fullName>
        <description>List of Models associated with the product line.</description>
        <label>Models</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>Categorizes the article based on the related product type.</description>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Beauty and Wellness</fullName>
                </value>
                <value>
                    <fullName>Beverage</fullName>
                </value>
                <value>
                    <fullName>Cooking</fullName>
                </value>
                <value>
                    <fullName>Female Grooming</fullName>
                </value>
                <value>
                    <fullName>Female Shave</fullName>
                </value>
                <value>
                    <fullName>Food Preparation</fullName>
                </value>
                <value>
                    <fullName>Garment</fullName>
                </value>
                <value>
                    <fullName>Grills</fullName>
                </value>
                <value>
                    <fullName>Haircare</fullName>
                </value>
                <value>
                    <fullName>Male Grooming</fullName>
                </value>
                <value>
                    <fullName>Male Shave</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Spare Parts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <description>Product Name</description>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABCoaster</fullName>
                </value>
                <value>
                    <fullName>AbToner</fullName>
                </value>
                <value>
                    <fullName>AirClimber</fullName>
                </value>
                <value>
                    <fullName>AirFryer</fullName>
                </value>
                <value>
                    <fullName>AirFryer360</fullName>
                </value>
                <value>
                    <fullName>AirFryerGrill</fullName>
                </value>
                <value>
                    <fullName>AirFryerGrillCombo</fullName>
                </value>
                <value>
                    <fullName>AirFryerOven6q</fullName>
                </value>
                <value>
                    <fullName>AirFryerOven8q</fullName>
                </value>
                <value>
                    <fullName>AirFryerOvenProUnk</fullName>
                </value>
                <value>
                    <fullName>AirFryerOvenUnk</fullName>
                </value>
                <value>
                    <fullName>AirFryerPro</fullName>
                </value>
                <value>
                    <fullName>AirFryerTurbo</fullName>
                </value>
                <value>
                    <fullName>AirFryerVortex</fullName>
                </value>
                <value>
                    <fullName>AirPurifier</fullName>
                </value>
                <value>
                    <fullName>AquaRug</fullName>
                </value>
                <value>
                    <fullName>BestKitchenHacks</fullName>
                </value>
                <value>
                    <fullName>BluBreeze</fullName>
                </value>
                <value>
                    <fullName>Calista</fullName>
                </value>
                <value>
                    <fullName>ClearDash</fullName>
                </value>
                <value>
                    <fullName>Contour</fullName>
                </value>
                <value>
                    <fullName>CopperChef</fullName>
                </value>
                <value>
                    <fullName>CopperWear</fullName>
                </value>
                <value>
                    <fullName>CouponFrenchFry</fullName>
                </value>
                <value>
                    <fullName>CouponGrocery</fullName>
                </value>
                <value>
                    <fullName>ElectricSkillet</fullName>
                </value>
                <value>
                    <fullName>FlexHose</fullName>
                </value>
                <value>
                    <fullName>FreeClearTV</fullName>
                </value>
                <value>
                    <fullName>FusionExcelerator</fullName>
                </value>
                <value>
                    <fullName>GenieProducts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Specifies the exact product the article relates to</description>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bread Makers</fullName>
                </value>
                <value>
                    <fullName>Coffee Makers</fullName>
                </value>
                <value>
                    <fullName>Blenders</fullName>
                </value>
                <value>
                    <fullName>Coffee Grinders</fullName>
                </value>
                <value>
                    <fullName>Juicers - Citrus</fullName>
                </value>
                <value>
                    <fullName>Can Openers</fullName>
                </value>
                <value>
                    <fullName>Toaster Ovens</fullName>
                </value>
                <value>
                    <fullName>Digital Steam Irons</fullName>
                </value>
                <value>
                    <fullName>Classic Irons</fullName>
                </value>
                <value>
                    <fullName>Steam Irons</fullName>
                </value>
                <value>
                    <fullName>Surface Cooking - Other</fullName>
                </value>
                <value>
                    <fullName>Deep Fryers</fullName>
                </value>
                <value>
                    <fullName>Food Processors</fullName>
                </value>
                <value>
                    <fullName>Hand Choppers</fullName>
                </value>
                <value>
                    <fullName>Electric Knives</fullName>
                </value>
                <value>
                    <fullName>Percolators</fullName>
                </value>
                <value>
                    <fullName>Griddles/Skillets</fullName>
                </value>
                <value>
                    <fullName>Grills - Indoor/Outdoor</fullName>
                </value>
                <value>
                    <fullName>Grills - Fixed Plate</fullName>
                </value>
                <value>
                    <fullName>Grills - Removable Plate</fullName>
                </value>
                <value>
                    <fullName>Grills - Other</fullName>
                </value>
                <value>
                    <fullName>Health Fryers</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Food Steamers</fullName>
                </value>
                <value>
                    <fullName>Juicers - Extractor</fullName>
                </value>
                <value>
                    <fullName>Kettles</fullName>
                </value>
                <value>
                    <fullName>Hand Mixers</fullName>
                </value>
                <value>
                    <fullName>Grills - Panini Maker</fullName>
                </value>
                <value>
                    <fullName>Pressure Cookers</fullName>
                </value>
                <value>
                    <fullName>Waffle/Sandwich Makers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Question for FAQ</description>
        <label>Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Transfer_to_CCS__c</fullName>
        <label>Transfer to CCS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Knowledge</label>
    <listViews>
        <fullName>All_Knowledge</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Knowledge</label>
    </listViews>
    <listViews>
        <fullName>archived_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Archived Articles</label>
    </listViews>
    <listViews>
        <fullName>draft_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Draft Articles</label>
    </listViews>
    <listViews>
        <fullName>published_articles</fullName>
        <columns>TITLE</columns>
        <columns>Question__c</columns>
        <columns>FIRST_PUBLISHED_DATE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Product_Line__c</columns>
        <columns>OWNER_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>Published Articles</label>
    </listViews>
    <pluralLabel>Knowledge</pluralLabel>
    <recordTypes>
        <fullName>FAQ</fullName>
        <active>true</active>
        <description>This can be used for simple question and answer articles</description>
        <label>FAQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>Special_Handling</fullName>
        <active>true</active>
        <description>Product Specific instructions by scenario</description>
        <label>Special Handling</label>
    </recordTypes>
</CustomObject>